--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "tp_irdt",
+  "name": "three-js-sample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "three": "^0.121.1"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.2",
+    "three": "^0.108.0"
   },
   "scripts": {
     "start": "react-scripts start",
